# getit

./: .coderabbit.yaml  .dockerignore  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_ACTIONS_FAILURE_REPORT.md  LICENSE  MANIFEST.in  PRODUCTION_READINESS.md  README.md  REFACTORING_PLAN.md  agents.md  docker-entrypoint.sh  docker-fix-pyproject.sh  gofile_downloader.py  opencode.json  pyproject.toml  urls.txt
.github/workflows/: ci.yml  release.yml
.homebrew-tap/: README.md
.homebrew-tap/Formula/: getit.rb
.sisyphus/: boulder.json
.sisyphus/notepads/audit-remediation/: decisions.md  learnings.md  problems.md
.sisyphus/plans/: audit-remediation.md
docs/: ARCHITECTURE.md  MCP.md  mcp-testing.md  typing.md
examples/mcp-configs/: cursor.json  generic-stdio.json
homebrew/: README.md  getit.rb
src/getit/: __init__.py  cli.py  config.py  events.py  registry.py  service.py  tasks.py
src/getit/core/: downloader.py  manager.py
src/getit/extractors/: __init__.py  base.py  gofile.py  mediafire.py  mega.py  onefichier.py  pixeldrain.py
src/getit/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/getit/storage/: history.py
src/getit/tui/: app.py
src/getit/tui/screens/: add_url.py
src/getit/tui/widgets/: status_bar.py
src/getit/utils/: __init__.py  http.py  logging.py  pacer.py  sanitize.py
tests/: conftest.py  test_http_client.py  test_logging_verification.py  test_storage_security.py
tests/integration/: test_cli_after_refactor.py  test_mcp_e2e.py
tests/security/: __init__.py  test_filename_sanitization.py  test_toctou_race.py
tests/unit/: test_config.py  test_events.py  test_registry.py  test_service.py  test_tasks.py
tests/unit/core/: test_downloader.py  test_http_client.py
tests/unit/extractors/: test_gofile.py  test_mediafire.py  test_mega.py  test_onefichier.py  test_pixeldrain.py  test_silent_exceptions.py
tests/unit/mcp/: test_prompts.py  test_resources.py  test_server.py  test_tools.py
tests/unit/tui/: __init__.py
